--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>V-GURU</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon(1).ico">
     <style>
 
@@ -83,10 +83,11 @@
       <tr>
         <td><img src="circle-cropped(1).png" alt="V-guru logo"></td>
         <td><h1>WELCOME TO ACHIEVER's LEARNING</h1>
-        <p>GET OUR RAW RESOURCE (slogan.....)</p></td>
+        <p>"You have to go wholeheartedly into anything in order to achieve anything worth having"</p><br>
+        <p>-Frank Lloyd Wright</p></td>
       </tr>
     </table>
-    
+
 
     <div class="navbar">
       <a href="#home">Home</a>
