--- a/Class 5.html
+++ b/Class 5.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Class 5</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon(1).ico">
     <style>
     body {
