--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <input type="email" name="youremail" value=""><br><br>
     <label><strong>Your Message:</strong></label>
     <textarea name="yourmessage" rows="1" cols="30"></textarea><br><br>
-    <button type="submit">Submit</button></button><br>
+    <button type="submit"><strong>Submit</strong></button></button><br>
     </form>
   </body>
 </html>
