--- a/index.html
+++ b/index.html
@@ -113,9 +113,51 @@
 
         </div>
       </div>
+      <div class="dropdown">
+        <button class="dropbtn">Quizzes
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="https://www.studyadda.com/exams/pre-primary/106">Kindergarden</a>
+          <a href="https://www.studyadda.com/exams/1st-class/32">Grade 1</a>
+          <a href="https://www.studyadda.com/exams/2nd-class/33">Grade 2</a>
+          <a href="https://www.studyadda.com/exams/3rd-class/34">Grade 3</a>
+          <a href="https://www.studyadda.com/exams/4th-class/35">Grade 4</a>
+          <a href="https://www.studyadda.com/exams/5th-class/36">Grade 5</a>
+          <a href="https://www.studyadda.com/exams/6th-class/37">Grade 6</a>
+          <a href="https://www.studyadda.com/exams/7th-class/38">Grade 7</a>
+          <a href="https://www.studyadda.com/exams/8th-class/31">Grade 8</a>
+          <a href="https://www.studyadda.com/exams/9th-class/30">Grade 9</a>
+          <a href="https://www.studyadda.com/exams/10th-class/24">Grade 10</a>
+          <a href="https://www.studyadda.com/exams/11th-class/23">Grade 11</a>
+          <a href="https://www.studyadda.com/exams/12th-class/22">Grade 12</a>
+
+        </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Video contents
+          <i class="fa fa-caret-down"></i>
+        </button>
+        <div class="dropdown-content">
+          <a href="#">Kindergarden</a>
+          <a href="Class 1.html">Grade 1</a>
+          <a href="Class 2.html">Grade 2</a>
+          <a href="Class 3.html">Grade 3</a>
+          <a href="Class 4.html">Grade 4</a>
+          <a href="Class 5.html">Grade 5</a>
+          <a href="Class 6.html">Grade 6</a>
+          <a href="Class 7.html">Grade 7</a>
+          <a href="Class 8.html">Grade 8</a>
+          <a href="Class 9.html">Grade 9</a>
+          <a href="Class 10.html">Grade 10</a>
+          <a href="Class 11.html">Grade 11</a>
+          <a href="Class 12.html">Grade 12</a>
+
+        </div>
+      </div>
     </div>
     <br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br>
     <hr>
     <h2 style="text-align:center;">About us</h2>
     <p style="text-align:center;">This platform helps students of different age to gain knowledge in different subjects.</p><br>
