--- a/Class 2.html
+++ b/Class 2.html
@@ -7,15 +7,17 @@
     <link rel="icon" href="favicon(1).ico">
     <style>
     body {
-
-    background-image: url('bgimage.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
       font-family: Arial, Helvetica, sans-serif;
+    }
+    .site-header{
+      height:250px;
     }
     </style>
   </head>
+  <body>
+    <header class="site-header">
+      <img src="k3.png" height="200px" width="100%">
+    </header>
   <body>
     <h1>Class 2</h1>
     <h2>Subjects:</h2>
