--- a/Class 3.html
+++ b/Class 3.html
@@ -7,17 +7,17 @@
     <link rel="icon" href="favicon(1).ico">
     <style>
     body {
-
-    background-image: url('bgimage.jpg');
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
       font-family: Arial, Helvetica, sans-serif;
+    }
+    .site-header{
+      height:250px;
     }
     </style>
   </head>
   <body>
-    <h1>Class 3</h1>
+    <header class="site-header">
+      <img src="k4.png" height="200px" width="100%">
+    </header>
     <h2>Subjects:</h2>
     <ol>
       <li><h3>Tamil:</h3>
