--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Kindergarden</a>
+          <a href="https://www.greatschools.org/gk/articles/kindergarten-learning-games-activities/">Kindergarden</a>
           <a href="Class 1.html">Grade 1</a>
           <a href="Class 2.html">Grade 2</a>
           <a href="Class 3.html">Grade 3</a>
@@ -118,7 +118,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="https://www.studyadda.com/exams/pre-primary/106">Kindergarden</a>
+          <a href="https://www.proprofs.com/quiz-school/topic/amp/kindergarten">Kindergarden</a>
           <a href="https://www.studyadda.com/exams/1st-class/32">Grade 1</a>
           <a href="https://www.studyadda.com/exams/2nd-class/33">Grade 2</a>
           <a href="https://www.studyadda.com/exams/3rd-class/34">Grade 3</a>
@@ -140,18 +140,18 @@
         </button>
         <div class="dropdown-content">
           <a href="#">Kindergarden</a>
-          <a href="Class 1.html">Grade 1</a>
-          <a href="Class 2.html">Grade 2</a>
-          <a href="Class 3.html">Grade 3</a>
-          <a href="Class 4.html">Grade 4</a>
-          <a href="Class 5.html">Grade 5</a>
-          <a href="Class 6.html">Grade 6</a>
-          <a href="Class 7.html">Grade 7</a>
-          <a href="Class 8.html">Grade 8</a>
-          <a href="Class 9.html">Grade 9</a>
-          <a href="Class 10.html">Grade 10</a>
-          <a href="Class 11.html">Grade 11</a>
-          <a href="Class 12.html">Grade 12</a>
+          <a href="video1.html">Grade 1</a>
+          <a href="video2.html">Grade 2</a>
+          <a href="video3.html">Grade 3</a>
+          <a href="#">Grade 4</a>
+          <a href="#">Grade 5</a>
+          <a href="#">Grade 6</a>
+          <a href="#">Grade 7</a>
+          <a href="#">Grade 8</a>
+          <a href="#">Grade 9</a>
+          <a href="#">Grade 10</a>
+          <a href="#">Grade 11</a>
+          <a href="#">Grade 12</a>
 
         </div>
       </div>
