--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-          <a href="#">Kindergarden</a>
+          <a href="videok.html">Kindergarden</a>
           <a href="video1.html">Grade 1</a>
           <a href="video2.html">Grade 2</a>
           <a href="video3.html">Grade 3</a>
