--- a/index.html
+++ b/index.html
@@ -6,7 +6,62 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon(1).ico">
     <style>
+    * {box-sizing: border-box;}
+    .mySlides {display: none;}
+    .slide{vertical-align: middle;}
 
+    /* Slideshow container */
+    .slideshow-container {
+      width:20%;
+      position: relative;
+      margin: auto;
+    }
+    /* Number text (1/3 etc) */
+    .numbertext {
+      color: #f2f2f2;
+      font-size: 12px;
+      padding: 8px 12px;
+      position: absolute;
+      top: 0;
+    }
+
+    /* The dots/bullets/indicators */
+    .dot {
+      height: 15px;
+      width: 15px;
+      margin: 0 2px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      transition: background-color 0.6s ease;
+    }
+
+    .active {
+      background-color: #717171;
+    }
+
+    /* Fading animation */
+    .fade {
+      -webkit-animation-name: fade;
+      -webkit-animation-duration: 1.5s;
+      animation-name: fade;
+      animation-duration: 1.5s;
+    }
+
+    @-webkit-keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
+    }
+
+    @keyframes fade {
+      from {opacity: .4}
+      to {opacity: 1}
+    }
+
+    /* On smaller screens, decrease text size */
+    @media only screen and (max-width: 300px) {
+      .text {font-size: 11px}
+    }
     body {
 
     background-image: url('bgimage.jpg');
@@ -81,7 +136,7 @@
   <body>
     <table cellspacing="20">
       <tr>
-        <td><img src="circle-cropped(1).png" alt="V-guru logo"></td>
+        <td><img class="logo"src="circle-cropped(1).png" alt="V-guru logo"></td>
         <td><h1>WELCOME TO ACHIEVER's LEARNING</h1>
         <p>"You have to go wholeheartedly into anything in order to achieve anything worth having"</p><br>
         <p>-Frank Lloyd Wright</p></td>
@@ -156,9 +211,55 @@
         </div>
       </div>
     </div>
-    <br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br>
-    <hr>
+    <br><br>
+    <div class="slideshow-container">
+
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img class="slide"src="g1.jpeg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img class="slide"src="g2.jpeg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img class="slide"src="g3.jpeg" style="width:100%">
+    </div>
+
+    </div>
+    <br>
+
+    <div style="text-align:center">
+      <span class="dot"></span>
+      <span class="dot"></span>
+      <span class="dot"></span>
+    </div>
+
+    <script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+      var i;
+      var slides = document.getElementsByClassName("mySlides");
+      var dots = document.getElementsByClassName("dot");
+      for (i = 0; i < slides.length; i++) {
+        slides[i].style.display = "none";
+      }
+      slideIndex++;
+      if (slideIndex > slides.length) {slideIndex = 1}
+      for (i = 0; i < dots.length; i++) {
+        dots[i].className = dots[i].className.replace(" active", "");
+      }
+      slides[slideIndex-1].style.display = "block";
+      dots[slideIndex-1].className += " active";
+      setTimeout(showSlides, 2000); // Change image every 2 seconds
+    }
+    </script>
+
     <h2 style="text-align:center;">About us</h2>
     <p style="text-align:center;">This platform helps students of different age to gain knowledge in different subjects.</p><br>
     <p style="text-align:center;">We help our students to engage in our society.</p><br>
